--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,4 +5,4 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 hello world"
+      - run: echo "🎉 hello world franckbg"
