--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,8 +1,8 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Github Actions test
+run-name: ${{github.actor}} is testing out Github Actions
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
+  Explore-Github-Actions:
+    runs-on: Python 3.9
     steps:
-      - run: echo "🎉 hello world franckbg"
+      - run: echo"hello world"
