--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Afficher la version de Python
         run: python -c "import sys; print(sys.version)"
+      - name: Formatter le code avec autopep8
+        run: pip install autopep8 && autopep8 --in-place --recursive .
 
       - name: Installer Flake8
         run: pip install flake8
